--- a/package.json
+++ b/package.json
@@ -21,13 +21,13 @@
     "@angular/router": "^20.0.0",
     "@angular/ssr": "^20.0.1",
     "@ngx-progressbar/core": "^5.3.2",
+    "@syncfusion/ej2-angular-circulargauge": "^29.2.4",
     "apexcharts": "^4.7.0",
     "appwrite": "^18.1.1",
     "daisyui": "^5.0.43",
     "dropzone": "^6.0.0-beta.2",
     "express": "^5.1.0",
     "flowbite": "^3.1.2",
-    "ng-apexcharts": "^1.15.0",
     "ngx-progressbar": "^14.0.0",
     "ngx-toastr": "^19.0.0",
     "rxjs": "~7.8.0",
