--- a/angular.json
+++ b/angular.json
@@ -31,6 +31,7 @@
             ],
             "styles": [
               "src/styles.scss",
+              "node_modules/shepherd.js/dist/css/shepherd.css",
               "node_modules/ngx-toastr/toastr.css",
               "node_modules/dropzone/dist/dropzone.css"
             ],
