--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@angular/ssr": "^20.0.1",
     "@ngx-progressbar/core": "^5.3.2",
     "@syncfusion/ej2-angular-circulargauge": "^29.2.4",
+    "angular-shepherd": "^19.0.2",
     "apexcharts": "^4.7.0",
     "appwrite": "^18.1.1",
     "daisyui": "^5.0.43",
