--- a/angular.json
+++ b/angular.json
@@ -23,6 +23,8 @@
             ],
             "tsConfig": "tsconfig.app.json",
             "inlineStyleLanguage": "scss",
+            "outputPath": "dist/store-it",
+            "index": "src/index.html",
             "assets": [
               {
                 "glob": "**/*",
@@ -34,10 +36,6 @@
               "node_modules/shepherd.js/dist/css/shepherd.css",
               "node_modules/ngx-toastr/toastr.css",
               "node_modules/dropzone/dist/dropzone.css"
-            ],
-            "scripts": [
-              "node_modules/apexcharts/dist/apexcharts.min.js"
-
             ],
             "server": "src/main.server.ts",
             "outputMode": "server",
